--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Trần Khánh Duy</title>
+<title>Lê Trung Kiên</title>
 <style>
 	body {
 		-webkit-user-select: none; /* Safari */
@@ -67,7 +67,7 @@
         <div class="div1">
             <!-- Thêm hình ảnh vào div1 -->
             <img src="img/WIN_20240306_13_54_05_Pro.jpg" alt="Ảnh" />
-            <h1>Thằng dở hơi này tên Duy</h1>
+            <h1>Thằng dở hơi này là đồng môn của thằng tên Duy</h1>
             <h2>Why Learn Programming?</h2>
             <p>Learning programming can open up a world of opportunities. Here are a few reasons why you should consider learning programming:</p>
             <ul>
