--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     	<div class="div_1"></div>
         <div class="div1">
             <!-- Thêm hình ảnh vào div1 -->
-            <img src="img/WIN_20240306_13_54_05_Pro.jpg" alt="Ảnh" />
+            <img src="img/Avatar.jpg" alt="Ảnh" />
             <h1>Thằng dở hơi này là đồng môn của thằng tên Duy</h1>
             <h2>Why Learn Programming?</h2>
             <p>Learning programming can open up a world of opportunities. Here are a few reasons why you should consider learning programming:</p>
