--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
             <img id="Avatar" src="img/Avatar.jpg" alt="Ảnh" />
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/profile.php?id=100032413416203">
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=100032413416203">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-facebook-48.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.overleaf.com/read/rkhvthwwnpzp#9bcbd1">
+                    <a target="_blank" href="https://www.overleaf.com/project/65e14d7200f5ba6b1f373cc4">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-resume-48.png">
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/trungkien2543">
+                    <a target="_blank" href="https://github.com/trungkien2543">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-github-48.png">
                     </a>
@@ -61,7 +61,7 @@
                     <p>
                         Course management software with basic functions such as: teaching assignment, recording learning results,... Bring solutions to support managers to save working time and increase accuracy
                     </p>
-                    <a href="https://github.com/katkt123/QuanLyCourse">
+                    <a target="_blank" href="https://github.com/katkt123/QuanLyCourse">
                         <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/Course.png" alt="Course" width="100%">
                     </a>
@@ -72,7 +72,7 @@
                     <p>
                         Traffic sign recognition programs are often complex and installed on systems with large processors and high-quality cameras.The goal of the report is to help us manage signage classification and identification 
                     </p>
-                    <a href="">
+                    <a target="_blank" href="">
                         <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/python.png" alt="Course" width="100%">
                     </a>
@@ -85,7 +85,7 @@
                     <p>
                         The main goal of the project is to build a simple yet powerful store management application, capable of managing product information, customer management and purchase transactions, as well as providing features to support warehouse management, ordering and revenue statistics.
                     </p>
-                    <a href="">
+                    <a target="_blank" href="https://github.com/trungkien2543/LaptopStore.git">
                         <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/laptop.png" alt="Course" width="100%">
                     </a>
