--- a/index.html
+++ b/index.html
@@ -41,26 +41,34 @@
         <div class="div2">
             <div class="sub_div2">
                 <h1>My Skills</h1>
-                <p>Here are some of my skills:</p>
                 <ul>
                     <li><strong>Advanced Java:</strong> I have a strong command of Java programming language, including advanced concepts such as multithreading, networking, and GUI programming.</li>
                     <li><strong>Basic Unity:</strong> I have basic knowledge of Unity game development platform, including game object manipulation, basic scripting, and scene creation.</li>
                     <li><strong>Web Development:</strong> I am proficient in HTML, CSS, JavaScript and PHP, and have experience building responsive and interactive websites.</li>
-                    <li><strong>Database Management:</strong> I have experience working with SQL databases, including MySQL and PostgreSQL.</li>
+                    <li><strong>Database Management:</strong> I have experience working with SQL databases, including MySQL and SQLServer.</li>
                     <li><strong>Version Control:</strong> I am familiar with Git and GitHub, and use version control for managing my projects.</li>
                     <li><strong>Problem Solving:</strong> I have strong problem-solving skills and enjoy tackling challenging programming problems.</li>
                     <li><strong>Continuous Learning:</strong> I am committed to continuous learning and staying updated with the latest technologies and trends in the field of programming.</li>
                 </ul>
-                <p>These skills have been developed through self-study, projects, and practical experience.</p>
             </div>
 
             <div class="sub_div2">
                 <h1>My project</h1>
                 <div class="project">
                     <h2>Manage Course</h2>
+                    <h3>
+                        . Technologies:
+                    </h3>
+                    <p class="language">
+                        Java Swing, SQL Server, Github
+                    </p>
+                    <h3>
+                        . Description:
+                    </h3>
                     <p>
                         Course management software with basic functions such as: teaching assignment, recording learning results,... Bring solutions to support managers to save working time and increase accuracy
                     </p>
+                    
                     <a target="_blank" href="https://github.com/katkt123/QuanLyCourse">
                         <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/Course.png" alt="Course" width="100%">
@@ -69,6 +77,15 @@
                 </div>
                 <div class="project">
                     <h2>Manage TrafficSign</h2>
+                    <h3>
+                        . Technologies:
+                    </h3>
+                    <p class="language">
+                        Python, SQLite
+                    </p>
+                    <h3>
+                        . Description:
+                    </h3>
                     <p>
                         Traffic sign recognition programs are often complex and installed on systems with large processors and high-quality cameras.The goal of the report is to help us manage signage classification and identification 
                     </p>
@@ -82,6 +99,15 @@
                 </div>
                 <div class="project">
                     <h2>Manage LaptopStore</h2>
+                    <h3>
+                        . Technologies:
+                    </h3>
+                    <p class="language">
+                        Java Swing, SQL Server, Github
+                    </p>
+                    <h3>
+                        . Description:
+                    </h3>
                     <p>
                         The main goal of the project is to build a simple yet powerful store management application, capable of managing product information, customer management and purchase transactions, as well as providing features to support warehouse management, ordering and revenue statistics.
                     </p>
