--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.overleaf.com/project/65e14d7200f5ba6b1f373cc4">
+                    <a target="_blank" href="https://www.overleaf.com/read/rkhvthwwnpzp#9bcbd1">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-resume-48.png">
                     </a>
