--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://www.overleaf.com/read/rkhvthwwnpzp#9bcbd1">
+                    <a target="_blank" href="file:///D:/Study_In_University/nam3/HocKy2/Ma_Nguon_Mo/MyCV/output.pdf">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-resume-48.png">
                     </a>
@@ -87,8 +87,8 @@
                     <p>
                         Traffic sign recognition programs are often complex and installed on systems with large processors and high-quality cameras.The goal of the report is to help us manage signage classification and identification 
                     </p>
-                    <a target= "_blank" class="github-button" href="" data-size="large" aria-label="View on GitHub">View on GitHub</a>
-                    
+                    <!-- <a target= "_blank" class="github-button" href="" data-size="large" aria-label="View on GitHub">View on GitHub</a>
+                     -->
                     <img src="img/python.png" alt="Course" width="100%">
 
                     <img src="img/python2.png" alt="Course" width="100%">
