--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li>
-                    <a target="_blank" href="file:///D:/Study_In_University/nam3/HocKy2/Ma_Nguon_Mo/MyCV/output.pdf">
+                    <a target="_blank" href="output.pdf">
                     <!-- Sử dụng thẻ <img> để chèn icon Facebook -->
                         <img src="img/icons8-resume-48.png">
                     </a>
